# LazyMansClang

./: .gitignore  CMakeLists.txt  LICENSE.assets.md  LICENSE.md  README.md  aboutdialog.cpp  aboutdialog.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
icons/: LMC0.icns
